# MarkieCli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  complex.md  demo-all-features.md  examples.md
.github/workflows/: release.yml
docs/: tdd-refactoring-plan.md
docs/explain/: 00-index.md  01-architecture-overview.md  02-rendering-pipeline.md  03-mermaid-subsystem.md  04-theme-system.md  05-output-formats.md  06-math-rendering.md
fonts/: README.md
scripts/: download-fonts.sh  install.sh  smoke-test.sh
src/: export.rs  fonts.rs  layout.rs  lib.rs  main.rs  math.rs  renderer.rs  theme.rs  xml.rs
src/mermaid/: flowchart.rs  layout.rs  mod.rs  parser.rs  render.rs  types.rs
tests/fixtures/: complex-class.mmd  complex-er.mmd  complex-mermaid.mmd  complex-sequence.mmd  complex-state.mmd  solarized_light.yaml  syntax_test.md  test.md
