[package]
name = "markie"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.57", features = ["derive"] }
cosmic-text = "0.17.1"
pulldown-cmark = "0.13.0"
resvg = "0.47.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tiny-skia = "0.12.0"
