[package]
name = "markie"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
cosmic-text = "0.17.1"
base64 = "0.22.1"
imagesize = "0.13.0"
pulldown-cmark = "0.13.0"
resvg = "0.47.0"
ureq = "3.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
syntect = "5.2.0"
tiny-skia = "0.12.0"
toml = "0.9.11"
latex2mathml = "0.2.3"
quick-xml = "0.39.0"
lru = "0.13"
parking_lot = "0.12"
