[package]
name = "markie"
version = "0.3.0"
edition = "2024"
description = "A pure Rust Markdown to SVG/PNG/PDF renderer with native Mermaid diagrams and LaTeX math"
license = "MIT"
repository = "https://github.com/lsj5031/markiecli"
homepage = "https://github.com/lsj5031/markiecli"
readme = "README.md"
keywords = ["markdown", "svg", "png", "pdf", "mermaid"]
categories = ["command-line-utilities", "rendering"]
default-run = "markie"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "markie"
path = "src/main.rs"

[[bin]]
name = "markie-mermaid"
path = "src/bin/mermaid.rs"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
cosmic-text = "0.17.1"
base64 = "0.22.1"
imagesize = "0.13.0"
pulldown-cmark = "0.13.0"
resvg = "0.47.0"
ureq = "3.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
syntect = "5.2.0"
tiny-skia = "0.12.0"
toml = "0.9.11"
latex2mathml = "0.2.3"
quick-xml = "0.39.0"
lru = "0.13"
parking_lot = "0.12"
svg2pdf = "0.13"
clap_complete = "4.5"
